girl look at that body

--- a/demo/html.html
+++ b/demo/html.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-
+  <main>
+    <h1>Hello there</h1>
+    <p class="main">Thank you for joining me.</p>
+  </main>
 </body>
 
 </html>
